# hri_fullbody

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml  requirements.txt  setup.cfg  setup.py
hri_fullbody/: face_pose_estimation.py  fullbody_detector.py  jointstate.py  node_pose_detect.py  one_euro_filter.py  protobuf_to_dict.py  rs_to_depth.py  urdf_generator.py
launch/: hri_fullbody.launch  hri_fullbody.launch.py  hri_fullbody_multipeople.launch  hri_fullbody_visualize.launch  hri_holistic.launch
module/: hri_fullbody  hri_fullbody_module.yaml
nodes/: detect  detect_multipeople  single_body_debug
rviz/: fullbody_urdf_visualization.rviz  holistic_urdf_visualization.rviz
src/hri_fullbody/: face_pose_estimation.py  fullbody_detector.py  jointstate.py  one_euro_filter.py  protobuf_to_dict.py  rs_to_depth.py  urdf_generator.py
src/hri_holistic/: jointstate.py  rs_to_depth.py  urdf_generator.py
srv/: SpecificPointXYZ.srv
urdf/: human-tpl.xacro
