<?xml version="1.0"?>
<package format="3">
  <name>hri_fullbody</name>
  <version>0.1.7</version>
  <description>ROS node implementing 2D/3D full-body pose estimation, using Google Mediapipe. Part of ROS4HRI.</description>

  <maintainer email="lorenzo.ferrini@pal-robotics.com">Lorenzo Ferrini</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>hri_msgs</depend>
  <depend>human_description</depend>
  <depend>image_geometry</depend>
  <depend>python3-mediapipe</depend>
  <depend>python3-ikpy</depend>
  <depend>diagnostic_msgs</depend>
  <exec_depend>rosconsole</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
